--- a/index.html
+++ b/index.html
@@ -1,7 +1,21 @@
 <!doctype html>
    <html>
    <head>
-   <meta charset="utf-8">
+        <meta charset="utf-8">
+	<title>TODO list</title>
+	<style>
+	h1 {
+	   text-align:center;
+	}
+	h3 {
+	     text-transform: uppercase;
+	}
+	li {
+         	     overflow: hidden;
+	     padding: 20px 0;
+	     border-bottom: 1px solid #eee;
+	}
+        </style>
         <title>TODO list</title>
     </head>
     <body>
