--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
 		background: #eee;
 		font-size: 18px;
 		transition: 0.2s;
+		-webkit-user-select: none;
+		-moz-user-select: none;
+		-ms-user-select: none;
+		user-select: none;
 	}
 	ul li:nth-child(odd) {
 		background: #f9f9f9;
@@ -35,13 +39,13 @@
          <h1>TODO list</h1>
          <h3>Todo</h3>
          <ul>
-	<li>Buy a hat for the bat</li>
-	<li>Clear the fogs for the frogs</li>
-	<li>Bring a box to the fox</li>
+			<li>Buy a hat for the bat</li>
+			<li>Clear the fogs for the frogs</li>
+			<li>Bring a box to the fox</li>
          </ul>
          <h3>Done</h3>
          <ul>
-	<li>Put the mittens on the kittens</li>
+			<li>Put the mittens on the kittens</li>
          </ul>
          </body>
        </html>
